Initial css section 1
set up navbar, and first box of text

--- a/code/index.html
+++ b/code/index.html
@@ -9,5 +9,47 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <!-- HEADER/NAV BAR -->
+        <header>
+            <div class="header-left">
+                <img src="../project_logo/logo.svg" alt="Front Logo">
+            </div>
+            <nav>
+                <div class="nav-links">
+                    <a href="#">Home</a>
+                    <a href="#">Features</a>
+                    <a href="#">Learn</a>
+                    <a href="#">Pricing</a>
+                    <a href="#">Hire us</a>
+                </div>
+                <div class="button">
+                    <input type="button" value="Buy Now">
+                </div>
+            </nav>
+        </header>
+
+        <div class="freedom-icons">
+            <div class="freedom">
+               <div class="freedom-text">
+                <h2>Empowering teams with the freedom</h2>
+                <p>Own the unlimited power of the web development</p>
+               </div>
+                <div class="freedom-bottom">
+                    <input type="button" value="insert fontawesome icon Play Me">
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+    
+            <div class="icongrid">
+                <img src="../logo_icons/asana.png" alt="Asana">
+                <img src="../logo_icons/atlassian.png" alt="Atlassian">
+                <img src="../logo_icons/calendar.png" alt="Calendar">
+                <img src="../logo_icons/google-A.png" alt="Google-A">
+                <img src="../logo_icons/google.png" alt="Google">
+                <img src="../logo_icons/paypal.jpg" alt="Paypal">
+                <img src="../logo_icons/weave.png" alt="Weave">
+            </div>
+        </div>
+
     </body>
 </html>
