Add more sections
finished some more sections, got help from class, and learned a new way to size images

--- a/code/index.html
+++ b/code/index.html
@@ -7,9 +7,11 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <script src="https://kit.fontawesome.com/0a5b246950.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- HEADER/NAV BAR -->
+       <div class="for-back">
         <header>
             <div class="header-left">
                 <img src="../project_logo/logo.svg" alt="Front Logo">
@@ -35,21 +37,88 @@
                 <p>Own the unlimited power of the web development</p>
                </div>
                 <div class="freedom-bottom">
-                    <input type="button" value="insert fontawesome icon Play Me">
+                    <button><i class="fa-solid fa-circle-play"></i>Play Video</button>
                     <a href="#">Learn more</a>
                 </div>
             </div>
     
             <div class="icongrid">
-                <img src="../logo_icons/asana.png" alt="Asana">
-                <img src="../logo_icons/atlassian.png" alt="Atlassian">
-                <img src="../logo_icons/calendar.png" alt="Calendar">
-                <img src="../logo_icons/google-A.png" alt="Google-A">
-                <img src="../logo_icons/google.png" alt="Google">
-                <img src="../logo_icons/paypal.jpg" alt="Paypal">
-                <img src="../logo_icons/weave.png" alt="Weave">
+                <div class="large-icon icon1">
+                    <img src="../logo_icons/asana.png" alt="Asana">
+                </div>
+                <div class="large-icon icon2">
+                    <img src="../logo_icons/atlassian.png" alt="Atlassian">
+                </div>
+                <div class="large-icon icon3">
+                    <img src="../logo_icons/calendar.png" alt="Calendar">
+                </div>
+                <div class="small-icon icon4">
+                    <img src="../logo_icons/google-A.png" alt="Google-A">
+                </div>
+                <div class="small-icon icon5">
+                    <img src="../logo_icons/google.png" alt="Google">
+                </div>
+                <div class="large-icon icon6">
+                    <img src="../logo_icons/paypal.jpg" alt="Paypal">
+                </div>
+                <div class="large-icon icon7">
+                    <img src="../logo_icons/weave.png" alt="Weave">
+                </div>
             </div>
         </div>
+       </div>
+
+        <section class="cards">
+            <div class="cards-top-text">
+                <h2>Key Benefits</h2>
+                <p>Design faster with a growing array of beautiful templates</p>
+            </div>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="../icons/responsive.svg" alt="responsive-icon">
+                    <h3>Responsive</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div class="card">
+                    <img src="../icons/customizable.svg" alt="customizable-icon">
+                    <h3>Customizable</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div class="card">
+                    <img src="../icons/premium.svg" alt="premium-icon">
+                    <div class="premium-head">
+                        <h3>Premium</h3>
+                        <span><span class="spantxt">sketch</span></span>
+                    </div>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div class="card">
+                    <img src="../icons/documentation.svg" alt="documentation-icon">
+                    <h3>Documentation</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="front">
+            <div class="front-left">
+                <h2>Front makes you look at things from a different prospective</h2>
+                <button><i class="fa-solid fa-circle-play"></i>Play Video</button>
+            </div>
+            <img src="../banners/banner_one.jpg" alt="banner one">
+        </section>
+
+        <section class="why-front">
+            <div class="why-text">
+                <h2>Why front?</h2>
+                <p>Front is an incredibly beautiful, fully responsive, and mobile first project on the web - it is the starting point for creative sites</p>
+            </div>
+
+        </section>
 
     </body>
 </html>
