--- a/code/index.html
+++ b/code/index.html
@@ -118,7 +118,167 @@
                 <p>Front is an incredibly beautiful, fully responsive, and mobile first project on the web - it is the starting point for creative sites</p>
             </div>
 
+            <div class="display">
+                <div class="circle">&#8226;</div>
+                <div class="line"></div>
+                <div class="circle">&#8226;</div>
+                <div class="line"></div>
+                <div class="circle">&#8226;</div>
+                <div class="line"></div>
+                <div class="circle">&#8226;</div>
+            </div>
+
+            <div class="play-img">
+                <div class="play-icon">
+                    <i class="fa-solid fa-play"></i>
+                </div>
+                <img src="../banners/banner_two.jpg" alt="banner 2">
+            </div>
         </section>
+        
+        <section class="hubspot">
+            <div class="portrait">
+                <img src="../people/woman_three.jpg" alt="woman-one">
+                <img src="../abstract/dots.svg" alt="dots">
+            </div>
+
+            <div class="hubtext">
+                <img src="../company_logos/hubspot.svg" alt="hubspot logo">
+                <p>The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                <h3>Christina Kray</h3>
+                <h4>Executive Director</h4>
+            </div>
+        </section>
+
+        <div class="brands">
+            <h2>TRUSTED BY THE WORLD'S BEST</h2>
+            <div class="brandnames">
+                <img src="../company_logos/weebly.svg" alt="Weebly">
+                <img src="../company_logos/uber.svg" alt="Uber">
+                <img src="../company_logos/slack.svg" alt="Slack">
+                <img src="../company_logos/airbnb.svg" alt="Airbnb">
+                <img src="../company_logos/spotify.svg" alt="Spotify">
+            </div>
+        </div>
+
+        <section class="pricing">
+            <div class="pricetext">
+                <h2>Pricing</h2>
+                <p>No additional costs. Pay for what you use.</p>
+            </div>
+
+            <div class="pricecards">
+
+                <div class="maincard">
+                    <div class="cardcontainer">
+                        <div class="cardTop">
+                            <h2>59<span> / mo</span></h2>
+                            <hr>
+                            <p>Start your Front business now. 100% guaranteed money back. No questions asked.</p>
+                        </div>
+        
+                        <div class="priceButton">
+                            <button><i class="fa-solid fa-circle-play"></i>Play Video</button>
+                            <p>No credit card required</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pricegrid">
+
+                    <div class="griditem">
+                        <img src="../icons/components.svg" alt="Components">
+                        <h2>Hundreds of components</h2>
+                        <p>Acheive maximum productivity with minimum effort with Front and create robust Limitless products.</p>
+                    </div>
+
+                    <div class="griditem">
+                        <img src="../icons/images.svg" alt="Images">
+                        <h2>Images included</h2>
+                        <p>Images included We made custom license for all our premium images in the front</p>
+                    </div>
+
+                    <div class="griditem">
+                        <img src="../icons/cancel.svg" alt="Cancel">
+                        <h2>Cancel anytime <span>sketch</span></h2>
+                        <p>If its not for you, just cancel, no hidden costs or fees.</p>
+                    </div>
+
+                    <div class="griditem">
+                        <img src="../icons/moneyback.svg" alt="Moneyback">
+                        <h2>Money back</h2>
+                        <p>100% guaranteed money back. No questions asked.</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="hf">
+            <div class="hireus">
+                <div class="toptext">
+                    <h2>Hire Us</h2>
+                    <p>Whatever your goal - we will get you there</p>
+                </div>
+                <hr>
+                <div class="quote">
+                    <p><em>" I love front! I love the ease of use, I love the fact that I have total creative freeom..."</em></p>
+                </div>
+                <div class="title">
+                    <h3>Charlotte Moore</h3>
+                    <h4>Head of Commercials, Slack</h4>
+                </div>
+                <div class="people">
+                    <img src="../people/woman_two.jpg" alt="Woman two">
+                    <img src="../people/woman_one.jpg" alt="Woman one">
+                    <img src="../people/man_one.jpg" alt="man one">
+                </div>
+            </div>
+
+            <div class="form">
+                <form action="Get">
+                    <h3>Fill out the form and we'll be in touch as soon as possible.</h3>
+                    <input type="text" name="first name" placeholder="First name">
+                    <input type="text" name="last name" placeholder="Last name">
+                    <input type="text" name="first name" placeholder="First name">
+                    <input type="text" name="last name" placeholder="Last name">
+                    <select name="Budget" id="budget">
+                        <option value="" disabled selected>Budget</option>
+                        <option value="budget1">$600</option>
+                        <option value="budget1">$700</option>
+                        <option value="budget1">$750</option>
+                        <option value="budget1">$800</option>
+                        <option value="budget1">$900</option>
+                        <option value="budget1">$900+</option>
+                    </select>
+                    <select name="country" id="Country">
+                        <option value="" disabled selected>Country</option>
+                        <option value="south-korea">South Korea</option>
+                        <option value="singapore">Singapore</option>
+                        <option value="norway">Norway</option>
+                        <option value="sweden">Sweden</option>
+                        <option value="denmark">Denmark</option>
+                        <option value="japan">Japan</option>
+                        <option value="netherlands">Netherlands</option>
+                        <option value="switzerland">Switzerland</option>
+                        <option value="finland">Finland</option>
+                        <option value="united-states">United States</option>
+                        <option value="canada">Canada</option>
+                        <option value="hong-kong">Hong Kong</option>
+                    </select>
+                    <textarea name="needs" id="needs" rows="8" cols="50" placeholder="Tell us more about your project, needs, and timeline, please..."></textarea>
+                    <div class="checkbox">
+                        <input type="checkbox" id="myCheckbox">
+                        <label for="myCheckbox">Yes, I'd like to receive occasional marketing emails from Front. I have the right to opt out at any time.</label>
+                    </div>
+                    <a href="#" class="privf">View privacy policy</a>
+                    <a href="#" class="privs">View privacy policy</a>
+                    <button type="submit">Get Started</button>
+                </form>
+            </div>
+        </div>
+        </section>
+
 
     </body>
 </html>
