--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="media-querie.css">
         <script src="https://kit.fontawesome.com/0a5b246950.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -17,15 +18,20 @@
                 <img src="../project_logo/logo.svg" alt="Front Logo">
             </div>
             <nav>
-                <div class="nav-links">
-                    <a href="#">Home</a>
-                    <a href="#">Features</a>
-                    <a href="#">Learn</a>
-                    <a href="#">Pricing</a>
-                    <a href="#">Hire us</a>
-                </div>
-                <div class="button">
-                    <input type="button" value="Buy Now">
+                <button class="navbar-toggler" aria-expanded="false" aria-controls="navbarDropdown">
+                    <span>&#9776;</span>
+                </button>
+                <div class="nav-full">
+                    <div class="nav-links">
+                        <a href="#">Home</a>
+                        <a href="#">Features</a>
+                        <a href="#">Learn</a>
+                        <a href="#">Pricing</a>
+                        <a href="#">Hire us</a>
+                    </div>
+                    <div class="button">
+                        <input type="button" value="Buy Now">
+                    </div>
                 </div>
             </nav>
         </header>
@@ -222,7 +228,7 @@
                     <hr>
                 </div>
                 <div class="quote">
-                    <p><em>" I love front! I love the ease of use, I love the fact that I have total creative freeom..."</em></p>
+                    <p><em>" I love front! I love the ease of use, I love the fact that I have total creative freedom..."</em></p>
                 </div>
                 <div class="title">
                     <h3>Charlotte Moore</h3>
