Finish Tablet screen size
finished responsivness to tablet screen size

--- a/code/index.html
+++ b/code/index.html
@@ -124,6 +124,7 @@
                 <p>Front is an incredibly beautiful, fully responsive, and mobile first project on the web - it is the starting point for creative sites</p>
             </div>
 
+            <!-- figure out text below circles -->
             <div class="display">
                 <div class="circle">&#8226;</div>
                 <div class="line"></div>
@@ -222,22 +223,26 @@
 
         <section class="hf">
             <div class="hireus">
-                <div class="toptext">
-                    <h2>Hire Us</h2>
-                    <p>Whatever your goal - we will get you there</p>
-                    <hr>
+                <div class="tablet-left">
+                    <div class="toptext">
+                        <h2>Hire Us</h2>
+                        <p>Whatever your goal - we will get you there</p>
+                        <hr>
+                    </div>
+                    <div class="quote">
+                        <p><em>" I love front! I love the ease of use, I love the fact that I have total creative freedom..."</em></p>
+                    </div>
                 </div>
-                <div class="quote">
-                    <p><em>" I love front! I love the ease of use, I love the fact that I have total creative freedom..."</em></p>
-                </div>
-                <div class="title">
-                    <h3>Charlotte Moore</h3>
-                    <h4>Head of Commercials, Slack</h4>
-                </div>
-                <div class="people">
-                    <img src="../people/woman_two.jpg" alt="Woman two">
-                    <img src="../people/woman_one.jpg" alt="Woman one">
-                    <img src="../people/man_one.jpg" alt="man one">
+                <div class="tablet-right">
+                    <div class="title">
+                        <h3>Charlotte Moore</h3>
+                        <h4>Head of Commercials, Slack</h4>
+                    </div>
+                    <div class="people">
+                        <img src="../people/woman_two.jpg" alt="Woman two">
+                        <img src="../people/woman_one.jpg" alt="Woman one">
+                        <img src="../people/man_one.jpg" alt="man one">
+                    </div>
                 </div>
             </div>
 
