--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
             <div class="header-left">
                 <img src="../project_logo/logo.svg" alt="Front Logo">
             </div>
-            <nav>
+            <nav id="nav">
                 <button class="navbar-toggler" aria-expanded="false" aria-controls="navbarDropdown">
                     <span>&#9776;</span>
                 </button>
@@ -207,7 +207,7 @@
 
                     <div class="griditem">
                         <img src="../icons/cancel.svg" alt="Cancel">
-                        <h2>Cancel anytime <span>sketch</span></h2>
+                        <h2>Cancel anytime <span><span class=".spantxt">sketch</span></h2>
                         <p>If its not for you, just cancel, no hidden costs or fees.</p>
                     </div>
 
@@ -277,7 +277,7 @@
                         <option value="canada">Canada</option>
                         <option value="hong-kong">Hong Kong</option>
                     </select>
-                    <textarea name="needs" id="needs" rows="50" cols="50" placeholder="Tell us more about your project, needs, and timeline, please..."></textarea>
+                    <textarea name="needs" id="needs" rows="8" cols="50" placeholder="Tell us more about your project, needs, and timeline, please..."></textarea>
                     <div class="checkbox">
                         <input type="checkbox" id="myCheckbox">
                         <h4>Yes, I'd like to receive occasional marketing emails from Front. I have the right to opt out at any time.</h4>
@@ -391,6 +391,8 @@
             </div>
 
         </footer>
+
+        
 
 
     </body>
